vt-617:pikkubugeja kaavaeditorissa

--- a/src/main/webapp/html/laskentakaava/laskentakaavapuu.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavapuu.html
@@ -54,16 +54,14 @@
     <div ng-if="farg.nimi == 'TOTUUSARVO'" ng-include="'value_funktio_handle.html'"></div>
 
     <div ng-if="farg.nimi == 'HAKUTOIVE'" ng-include="'parametri_funktio_handle.html'"></div>
-    <div ng-if="farg.nimi == 'DEMOGRAFIA'" ng-include="'parametri_funktio_handle.html'"></div>
 
-    <div ng-if="farg.nimi == 'HAETOTUUSARVO'" ng-include="'parametri_funktio_handle.html'"></div>
-    <div ng-if="farg.nimi == 'HAELUKUARVO'" ng-include="'parametri_funktio_handle.html'"></div>
-    <div ng-if="farg.nimi == 'HAEMERKKIJONOJAKONVERTOILUKUARVOKSI'" ng-include="'parametri_funktio_handle.html'"></div>
-    <div ng-if="farg.nimi == 'HAEMERKKIJONOJAVERTAAYHTASUURUUS'" ng-include="'parametri_funktio_handle.html'"></div>
-    <div ng-if="farg.nimi == 'HAEMERKKIJONOJAKONVERTOITOTUUSARVOKSI'" ng-include="'parametri_funktio_handle.html'"></div>
-    <div ng-if="farg.nimi == 'VALINTAPERUSTEYHTASUURUUS'" ng-include="'parametri_funktio_handle.html'"></div>
+    <div ng-if="farg.nimi == 'HAETOTUUSARVO'" ng-include="'haettava_arvo_template.html'"></div>
+    <div ng-if="farg.nimi == 'HAELUKUARVO'" ng-include="'haettava_arvo_template.html'"></div>
+    <div ng-if="farg.nimi == 'HAEMERKKIJONOJAKONVERTOILUKUARVOKSI'" ng-include="'haettava_arvo_template.html'"></div>
+    <div ng-if="farg.nimi == 'HAEMERKKIJONOJAVERTAAYHTASUURUUS'" ng-include="'haettava_arvo_template.html'"></div>
+    <div ng-if="farg.nimi == 'HAEMERKKIJONOJAKONVERTOITOTUUSARVOKSI'" ng-include="'haettava_arvo_template.html'"></div>
+    <div ng-if="farg.nimi == 'VALINTAPERUSTEYHTASUURUUS'" ng-include="'haettava_arvo_template.html'"></div>
     
-    <div ng-if="farg.nimi == 'KESKIARVO'" ng-include="'funktio_handle.html'"></div>
     <div ng-if="farg.nimi == 'TAI'" ng-include="'funktio_handle.html'"></div>
     <div ng-if="farg.nimi == 'TULO'" ng-include="'funktio_handle.html'"></div>
     <div ng-if="farg.nimi == 'JOS'" ng-include="'funktio_handle.html'"></div>
