vt-617: painotettu keskiarvo -funktio templaten korjaus

--- a/src/main/webapp/html/laskentakaava/laskentakaavapuu.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavapuu.html
@@ -96,7 +96,7 @@
     <div ng-if="farg.nimi == 'NIMETTYLUKUARVO'" ng-include="'nimetty_funktio_handle.html'"></div>
     <div ng-if="farg.nimi == 'NIMETTYTOTUUSARVO'" ng-include="'nimetty_funktio_handle.html'"></div>
 
-    <div ng-if="farg.nimi == 'PAINOTETTUKESKIARVO'" ng-include="'funktio_template_handle.html'"></div>
+    <div ng-if="farg.nimi == 'PAINOTETTUKESKIARVO'" ng-include="'funktio_handle.html'"></div>
 
 
 </script>
