VT-609: Valintaryhmälle organisaatioiden tallennus

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="../js/valintaperusteet.js"></script>
     <script type="text/javascript" src="../js/valintaryhmaHakukohdeTree.js"></script>
     <script type="text/javascript" src="../js/valintaryhma.js"></script>
+    <script type="text/javascript" src="../js/valintaryhma_uusi.js"></script>
     <script type="text/javascript" src="../js/laskentakaavaModel.js"></script>
     <script type="text/javascript" src="../js/hakijaryhma.js"></script>
     <script type="text/javascript" src="../js/hakijaryhmaValintatapajono.js"></script>
@@ -31,6 +32,7 @@
     <script type="text/javascript" src="../js/hakukohdevalinnanvaihe.js"></script>
     <script type="text/javascript" src="../js/valintatapajono.js"></script>
     <script type="text/javascript" src="../js/jarjestyskriteeri.js"></script>
+    <script type="text/javascript" src="../js/organisaatio.js"></script>
     <script type="text/javascript" src="../js/directives.js"></script>
     <script type="text/javascript" src="../js/haku.js"></script>
     <script type="text/javascript" src="../js/filters.js"></script>
