--- a/src/main/webapp/html/valintaryhmatlistaus.html
+++ b/src/main/webapp/html/valintaryhmatlistaus.html
@@ -35,7 +35,7 @@
 <div class="tabsheets">
     <div class="search">
         <div>
-            <a href="#/valintaryhma/root/lisaaSisaltyvaValintaryhma" class="button small primary"> <i class="fa fa-plus"></i> {{'valintaryhmatlistaus.add.valintaryhma' | i18n}}</a>
+            <a href="#/valintaryhma/" class="button small primary"> <i class="fa fa-plus"></i> {{'valintaryhmatlistaus.add.valintaryhma' | i18n}}</a>
             <a href="#/hakukohde/" class="button small primary"> <i class="fa fa-plus"></i> {{'valintaryhmatlistaus.add.hakukohde' | i18n}}</a>
             <a class="button small" ng-click="domain.expandTree()"> <i class="fa fa-expand"></i> Avaa puu</a>
         </div>
