--- a/src/main/webapp/html/valintatapajono.html
+++ b/src/main/webapp/html/valintatapajono.html
@@ -60,19 +60,19 @@
 
         <div class="clear"></div>
 
-        <label class="form-row-label" for="varasijat">Varasijat</label>
+        <label class="form-row-label" for="varasijat">Varasija rajoitus</label>
         <div class="form-row-content">
             <input type="number" min="0" id="varasijat" name="varasijat" ng-model="model.valintatapajono.varasijat" required>
         </div>
         <div class="clear"></div>
 
-        <label class="form-row-label" for="varasijaTayttoPaivat">Varasija täyttö päivät</label>
+        <label class="form-row-label" for="varasijaTayttoPaivat">Montako päivää varasijoja täytetään</label>
         <div class="form-row-content">
             <input type="number" min="0" id="varasijaTayttoPaivat" name="varasijaTayttoPaivat" ng-model="model.valintatapajono.varasijaTayttoPaivat" required>
         </div>
         <div class="clear"></div>
 
-        <label class="form-row-label" for="poissaOlevaTaytto">Poissa olevien täyttö</label>
+        <label class="form-row-label" for="poissaOlevaTaytto">Täytetäänkö poissa olevien tilalle</label>
         <div class="form-row-content">
             <div class="field-container-checkbox">
                 <input type="checkbox" id="poissaOlevaTaytto" name="poissaOlevaTaytto" ng-model="model.valintatapajono.poissaOlevaTaytto">
