--- a/src/main/webapp/html/hakukohde_uusi.html
+++ b/src/main/webapp/html/hakukohde_uusi.html
@@ -1,15 +1,4 @@
-﻿<!-- Node template -->
-<script type="text/ng-template" id="node.html">
-    <span class="label" ng-if="data.nimi | filter:domain.search.q">
-        <i class="fa fa-users valintaryhma"  ng-class="{ kiinni: domain.isCollapsed(data), eilapsia: !(data.alavalintaryhmat.length > 0), auki: domain.isExpanded(data)}" ng-click="expandNode(data)"></i>
-        <input name="valintaryhmaOid" ng-required="!model.hakukohde.valintaryhmaOid" type="radio" ng-model="model.hakukohde.valintaryhmaOid" value="{{data.oid}}" id="{{data.oid}}"/> <label for="{{data.oid}}">{{data.nimi}}</label>
-    </span>
-    <ol ng-if="data.isVisible">
-        <li ng-repeat="data in data.alavalintaryhmat | filter:domain.search.q | orderBy:predicate" ng-include="'node.html'">
-        </li>
-    </ol>
-
-</script>
+﻿
 
 <h1>Hakukohteen luonti</h1>
 
@@ -27,21 +16,7 @@
         <label class="form-row-label">Ylävalintaryhmä</label>
 
         <div class="form-row-content width-60">
-            <input type="text" class="search" placeholder="Suodata valintaryhmiä" id="text" ng-model="domain.search.q">
-            <a class="button small" ng-click="domain.expandTree()"> <i class="fa fa-expand"></i> Avaa puu</a>
-            <br />
-            <span>Haku palautti {{domain.tilasto.valintaryhmia}} valintaryhmää</span>
-            <div class="results">
-                <ol class="treelist collapsible multiselect">
-                    <li ng-repeat="data in domain.valintaperusteList | filter:domain.search.q | orderBy:predicate"
-                        ng-model="data"
-                        ng-if="!domain.isHakukohde(data)"
-                        class="{{addClass('uiExpanded',domain.isExpanded(data))}} {{addClass('uiCollapsed',domain.isCollapsed(data))}}"
-                        ng-include="'node.html'">
-                    </li>
-                </ol>
-            </div>
-
+            <div ng-include="'partials/valintaryhmaSelector.html'" />
             <div class="clear"></div>
         </div>
         <div class="clear"></div>
