VT-609: Puu näkymään oikein

--- a/src/main/webapp/html/hakukohde_uusi.html
+++ b/src/main/webapp/html/hakukohde_uusi.html
@@ -3,8 +3,7 @@
 <h1>Hakukohteen luonti</h1>
 
 <div class="tabs">
-    <a href="#/hakukohde/{{model.hakukohde.oid}}/" class="tab current"><span>Hakukohteen perustiedot</span></a>
-    <a ng-show="model.hakukohde" href="#/hakukohde/{{model.hakukohde.oid}}/laskentakaava" class="tab"><span>Laskentakaavat</span></a>
+    <a class="tab current"><span>Hakukohteen perustiedot</span></a>
 </div>
 
 
