vt-617: refaktoroitu funktion html-templaten palauttava funktio kontrolleriin

--- a/src/main/webapp/html/laskentakaava/laskentakaavalomake.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavalomake.html
@@ -113,9 +113,9 @@
     </div>
 
     <div class="clear"></div>
-    <div class="gradingformula dd" style="width:60%;float:left;"
-        ng-include="'laskentakaava/laskentakaavapuu.html'">
-    </div>
+    
+    <!-- Laskentakaavapuu -->
+    <div ng-include="'laskentakaava/laskentakaavapuu.html'"></div>
 
 
     
