vt-617: refaktorointia, siirretään logiikkaa angular-templateihin

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -43,8 +43,9 @@
     <script type="text/javascript" src="../js/laskentakaavat/laskentakaavalista.js"></script>
     <script type="text/javascript" src="../js/laskentakaavat/laskentakaava.js"></script>
     <script type="text/javascript" src="../js/laskentakaavat/laskentakaavapuu.js"></script>
+    <script type="text/javascript" src="../js/laskentakaavat/laskentakaavadirectives.js"></script>
+
     <script type="text/javascript" src="../js/laskentakaavat/hakukohdelaskentakaavalista.js"></script>
-    
     <script type="text/javascript" src="../js/valintaryhmavalinnanvaihe.js"></script>
     <script type="text/javascript" src="../js/loading.js"></script>
     <script type="text/javascript" src="../js/valintakoe.js"></script>
