--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -36,7 +36,8 @@
     <script type="text/javascript" src="../js/directives.js"></script>
     <script type="text/javascript" src="../js/haku.js"></script>
     <script type="text/javascript" src="../js/filters.js"></script>
-    
+    <script type="text/javascript" src="../js/auth.js"></script>
+
     <script type="text/javascript" src="../js/laskentakaavat/laskentakaavadomain.js"></script>
     <script type="text/javascript" src="../js/laskentakaavat/laskentakaavaresources.js"></script>
     <script type="text/javascript" src="../js/laskentakaavat/laskentakaavamenu.js"></script>
