--- a/src/main/webapp/html/import.html
+++ b/src/main/webapp/html/import.html
@@ -1,3 +1,5 @@
+<h1>Yhteisvalinnan hallinta</h1>
+
 <div class="tabs">
     <a href="#/etusivu" class="tab"><span>Valintaryhmät ja hakukohteet</span></a>
     <a href="#/laskentakaava" class="tab"><span>Laskentakaavat</span></a>
